[project]
name = "hospitalmas"
version = "0.1.0"
description = "HospitalMAS using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=1.10.1",
    "crewai[google-genai,litellm,tools]==1.10.1",
    "fastapi>=0.135.2",
    "mcp>=1.26.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
hospitalmas = "hospitalmas.main:run"
run_crew = "hospitalmas.main:run"
train = "hospitalmas.main:train"
replay = "hospitalmas.main:replay"
test = "hospitalmas.main:test"
run_with_trigger = "hospitalmas.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
